Camera movement in progress

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,12 @@ LocalMap=/Game/Example_Map
 GameName=Ladders
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+EditorStartupMap=/Game/Maps/DevMaps/Dev_LVL1.Dev_LVL1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+GameDefaultMap=/Game/Level1.Level1
 GlobalDefaultGameMode=/Game/Blueprints/GM_Ladders.GM_Ladders_C
 GlobalDefaultServerGameMode=None
 
@@ -25,4 +25,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
