--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Content/Modules/Module_Pauvre_AppartementVerticalA.uasset
