--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ LocalMap=/Game/Example_Map
 GameName=Ladders
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DevMaps/Dev_LVL1.Dev_LVL1
+EditorStartupMap=/Game/Maps/Level1.Level1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
