--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/UI_UX/Maps/Menu_Principal.Menu_Principal
 GlobalDefaultGameMode=/Game/Blueprints/GM_Ladders.GM_Ladders_C
 GlobalDefaultServerGameMode=None
 
@@ -55,5 +55,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
 
