--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,9 +102,10 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/UI_UX/Maps/Menu_Principal.Menu_Principal
+GameDefaultMap=/Game/UI_UX/MenuP/Maps/Menu_Principal.Menu_Principal
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GM_Ladders.GM_Ladders_C
 GlobalDefaultServerGameMode=None
 
-
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
